--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -2,3 +2,9 @@ server:
   port: 8080
   servlet:
     path: /
+spring:
+  datasource:
+    url: jdbc:mysql://localhost/test
+    username: root
+    password: root123
+    driver-class-name: com.mysql.jdbc.Driver
